<resources>
    <string name="app_name">PokasApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_scrolling">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="quickstart_message">Click the SUBSCRIBE TO NEWS button below to subscribe to the
        news topic. Messages sent to the news topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_news">Subscribe To News</string>
    <string name="log_token">Log Token</string>
    <string name="go_to_blog">Go To Blog</string>
    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_post">Add Post</string>
    <string name="enter_post_title">Enter Post Title</string>
    <string name="enter_post_desc">Enter Post Desc...</string>
    <string name="post_it">Post it</string>
    <string name="add_image_content_desc">addImage</string>

</resources>
