<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.HomeActivity"
    tools:showIn="@layout/activity_home">

    <TextView
        android:id="@+id/informationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/quickstart_message" />

    <Button
        android:id="@+id/subscribeButton"
        android:layout_width="@dimen/standard_field_width"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/informationTextView"
        android:layout_marginTop="20dp"
        android:text="@string/subscribe_to_news" />

    <Button
        android:id="@+id/logTokenButton"
        android:layout_width="@dimen/standard_field_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/subscribeButton"
        android:text="@string/log_token" />

</RelativeLayout>
